2017-05-11  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/70538
	* g++.dg/cpp0x/pr70538.C: New.

2017-05-11  Uros Bizjak  <ubizjak@gmail.com>

	* gcc.target/i386/pr22152.c: Fix undefined testcase.  Remove
	unnecessary loop.  Run on 32-bit targets only.
	(dg-options): Remove -fno-tree-sink.

2017-05-11  Kelvin Nilsen  <kelvin@gcc.gnu.org>

	* gcc.target/powerpc/cmpb-1.c: New test.
	* gcc.target/powerpc/cmpb-2.c: New test.
	* gcc.target/powerpc/cmpb-3.c: New test.
	* gcc.target/powerpc/cmpb32-1.c: New test.
	* gcc.target/powerpc/cmpb32-2.c: New test.

2017-05-11  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/80705
	* gcc.dg/vect/bb-slp-pr80705.c: New testcase.

2017-05-11  Nathan Sidwell  <nathan@acm.org>

	* lib/scanlang.exp: New.
	* lib/gcc-dg.exp: Load scanlang.exp.
	* g++.dg/inherit/covariant7.C: Use scan-lang-dump.

2017-05-11  Mikhail Maltsev  <maltsevm@gmail.com>

	PR testsuite/80580
	* gcc.dg/gimplefe-error-6.c: New test.

2017-05-11  Mikhail Maltsev  <maltsevm@gmail.com>

	PR testsuite/80580
	* gcc.dg/gimplefe-error-5.c: New test.

2017-05-11  Mikhail Maltsev  <maltsevm@gmail.com>

	PR testsuite/80580
	* gcc.dg/gimplefe-error-4.c: New test.

2017-05-10  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	* gcc.target/powerpc/p8-vec-xl-xst.c: New file.

2017-05-10  Sebastian Peryt  <sebastian.peryt@intel.com>

	* gcc.target/i386/avx512f-vmaxsd-1.c (_mm_mask_max_round_sd)
	(_mm_maskz_max_round_sd): Test new intrinsics.
	* gcc.target/i386/avx512f-vmaxsd-2.c: New.
	* gcc.target/i386/avx512f-vmaxss-1.c (_mm_mask_max_round_ss)
	(_mm_maskz_max_round_ss): Test new intrinsics.
	* gcc.target/i386/avx512f-vmaxss-2.c: New.
	* gcc.target/i386/avx512f-vminsd-1.c (_mm_mask_min_round_sd)
	(_mm_maskz_min_round_sd): Test new intrinsics.
	* gcc.target/i386/avx512f-vminsd-2.c: New.
	* gcc.target/i386/avx512f-vminss-1.c (_mm_mask_min_round_ss)
	(_mm_maskz_min_round_ss): Test new intrinsics.
	* gcc.target/i386/avx512f-vminss-2.c: New.