@@ -4,6 +4,7 @@
 
 #include <math.h>
 #include "avx512f-check.h"
+#include "avx512f-helper.h"
 
 static void
 compute_vrsqrt14sd (double *s1, double *s2, double *r)
@@ -15,7 +16,8 @@ compute_vrsqrt14sd (double *s1, double *s2, double *r)
 static void
 avx512f_test (void)
 {
-  union128d s1, s2, res1;
+  union128d s1, s2, res1, res2, res3;
+  __mmask8 m = 0;
   double res_ref[2];
 
   s1.x = _mm_set_pd (-3.0, 111.111);
@@ -27,4 +29,17 @@ avx512f_test (void)
 
   if (check_fp_union128d (res1, res_ref))
     abort ();
+
+  res2.x = _mm_set_pd (-4.0, DEFAULT_VALUE);
+  res2.x = _mm_mask_rsqrt14_sd(res2.x, m, s1.x, s2.x);
+ 
+  MASK_MERGE (d) (res_ref, m, 1);
+  if (checkVd (res2.a, res_ref, 2))
+    abort();
+
+  res3.x = _mm_maskz_rsqrt14_sd(m, s1.x, s2.x);
+  
+  MASK_ZERO (d) (res_ref, m, 1);
+  if (checkVd (res3.a, res_ref, 2))
+    abort();
 }
